Changes
=======

1.1.7 (TBD)
-----------

- Add resampling option to merge and rio-merge (#1996).

1.1.6 (2020-09-14)
------------------

- Remove background layer from boundless VRT (#1982). It's not needed since
  fixes in GDAL after 3.1.3. Wheels on PyPI for rasterio 1.1.6 will patch GDAL
  2.4.4 to fix those GDAL issues.
- Clean up VSI files left by MemoryFileBase, resolving #1953.
- Do not pass empty coordinate arrays to warp._transform to avoid crashes with
  some versions of GDAL as reported in #1952. Instead, directly return empty
  output arrays.
- Properly convert block size `--co` option values to int in rio-clip and
  rio-warp to prevent exceptions reported in #1989.
- Fail gracefully when rio-convert lacks an input file (#1985).
- Allow merge.merge() to open one dataset at a time (#1831).
- Optimize CRS.__eq__() for CRS described by EPSG codes.
- Fix bug in ParsedPath.is_remote() reported in #1967.
- The reproject() method accepts objects that provide `__array__` in addition
  to instances of numpy.ndarray (#1957, #1959).
- Custom labels may be used with show_hist() by giving the `label` keyword
  argument a sequence of label strings, one per band.

1.1.5 (2020-06-02)
------------------

- Earlier versions of rasterio set the CHECK_WITH_INVERT_PROJ config option to
  `True` by default. This is very rarely necessary and broke the GRIB format
  driver (#1248), so we no longer set this option (#1942). Users of rasterio
  1.1.5 in combination with GDAL 1.11 and PROJ 4.8 may see some small
  differences, compared to rasterio versions < 1.1.5, in results of warping
  global datasets.
- WarpedVRT can properly handle two use cases that weren't ruled out in version
  1.1.4: simple scaling of datasets and control over the scaling of reprojected
  output (#1921, #1936).
- The error in making boundless reads of datasets opened using the
  OVERVIEW_LEVEL reported in #1929 has been resolved by #1939.